@@ -1,7 +1,7 @@
-// src/com/wimbledor/combat/TurnBasedSystem/CombatCoordinator.java
 package com.wimbledor.combat.TurnBasedSystem;
 
 import com.wimbledor.combat.CombatActions.ICombatAction;
+import com.wimbledor.combat.CombatExecutor;
 import com.wimbledor.combat.aiBrains.Decision;
 import com.wimbledor.entities.ICombatEntity;
 import com.wimbledor.entities.Team;
@@ -9,14 +9,13 @@ import com.wimbledor.entities.Team;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
-import java.util.Queue;
+import java.util.stream.Collectors;
 
 public class CombatCoordinator {
-    private final TurnProcessor processor;
+    private final TurnProcessor      processor;       // from :contentReference[oaicite:2]{index=2}:contentReference[oaicite:3]{index=3}
     private final List<ICombatEntity> allEntities;
-    private       RoundTurnQueue      currentQueue;
-    private       RoundResult         currentRoundResult;
-    private       int                 roundCounter = 1;
+    private       RoundTurnQueue      queue;
+    private       int                 roundNumber = 1;
 
     public CombatCoordinator(ICombatEntity player, List<ICombatEntity> enemies) {
         Objects.requireNonNull(player);
@@ -27,111 +26,98 @@ public class CombatCoordinator {
         allEntities.add(player);
         allEntities.addAll(enemies);
 
-        startNewRound();
+        this.queue = new RoundTurnQueue(sortedAlive(), roundNumber++);
     }
 
+    /** Peek at the next AI action so the loop can schedule its delay. */
+    public ICombatAction peekNextAiAction() {
+        ICombatEntity next = queue.peekNext();
+        if (next == null || next.getTeam() == Team.PLAYER) return null;
+        Decision d = next.decideNextAction(getEnemiesOf(next.getTeam()));
+        return (d == null ? null : d.action);
+    }
+
+    /**
+     * Advance by exactly one turn.
+     *  – rolls over to a new round if the queue exhausts
+     *  – returns PLAYER_TURN to pause loop for input
+     *  – or AI_TURN after immediately resolving one AI action
+     */
     public TurnResult nextTurn() {
-        if (isBattleOver()) {
-            return TurnResult.battleOver();
-        }
-
-        ICombatEntity actor = currentQueue.nextTurn();
-        // if queue was exhausted, start a new round
+        // 1) get the next actor, rolling over as needed
+        ICombatEntity actor = queue.nextTurn();
         if (actor == null) {
-            startNewRound();
-            actor = currentQueue.nextTurn();
+            // round exhausted → start new
+            queue = new RoundTurnQueue(sortedAlive(), roundNumber++);
+            actor = queue.nextTurn();
         }
 
-        List<ICombatEntity> order  = getAliveTurnOrder();
-        List<ICombatEntity> foes   = getEnemiesOf(actor.getTeam());
-        TurnResult result;
+        // 2) snapshot for UI
+        List<ICombatEntity> order   = sortedAlive();
+        List<ICombatEntity> foes    = getEnemiesOf(actor.getTeam());
+        TurnResult          result;
 
+        // 3) branch to TurnProcessor
         if (actor.getTeam() == Team.PLAYER) {
-            // pause and give UI the player’s actions
             result = processor.getPlayerPause(order, foes);
         } else {
-            // resolve exactly one AI action
             result = processor.handleAiTurn(actor, order, foes);
         }
 
-        currentRoundResult.addTurnResult(result);
+        List<AttackResult> results = result.getResults();
+        if (results != null) {
+            for (AttackResult ar : results) {
+                if (!ar.target().isAlive()) {
+                    queue.removeDead(ar.target());
+                }
+            }
+        }
+
         return result;
     }
 
-    /** Peek the next AI action so CombatLoop can schedule its timing. */
-    public ICombatAction peekNextAiAction() {
-        ICombatEntity next = currentQueue.peekNext();
-        if (next == null || next.getTeam() == Team.PLAYER) return null;
-        Decision d = next.decideNextAction(getEnemiesOf(next.getTeam()));
-        return d == null ? null : d.action;
-    }
-    private void startNewRound() {
-        var aliveSorted = allEntities.stream()
-                .filter(ICombatEntity::isAlive)
-                .sorted(Comparator.comparingInt(e -> -e.getDerived(com.wimbledor.combat.enums.DerivedStat.SPEED)))
-                .toList();
+    /**
+     * Called from CombatController when the user clicks an action button.
+     * Resolves the player’s action immediately, then purges any killed.
+     */
+    public TurnResult playerAct(ICombatAction action,
+                                List<ICombatEntity> targets) {
+        // 1) Let the TurnProcessor execute & log the attack(s)
+        TurnResult result = processor.handlePlayerTurn(
+                sortedAlive(),
+                getEnemiesOf(Team.PLAYER),
+                action,
+                targets
+        );
 
-        currentQueue       = new RoundTurnQueue(aliveSorted, roundCounter);
-        currentRoundResult = new RoundResult(roundCounter++, aliveSorted);
-    }
-
-    public boolean isBattleOver() {
-        boolean anyPlayer = allEntities.stream()
-                .anyMatch(e -> e.isAlive() && e.getTeam() == Team.PLAYER);
-        boolean anyEnemy  = allEntities.stream()
-                .anyMatch(e -> e.isAlive() && e.getTeam() != Team.PLAYER);
-        return !(anyPlayer && anyEnemy);
-    }
-
-    /** Return the very next TurnResult, never skipping anything. */
-    public TurnResult step() {
-        if (isBattleOver()) {
-            return TurnResult.battleOver();
+        // 2) Immediately remove any dead from the current queue
+        for (AttackResult ar : result.getResults()) {
+            if (!ar.target().isAlive()) {
+                queue.removeDead(ar.target());
+            }
         }
 
-        ICombatEntity actor = currentQueue.nextTurn();
-        // If queue exhausted, that'll return null → start new round
-        if (actor == null) {
-            startNewRound();
-            actor = currentQueue.nextTurn();
-        }
-
-        List<ICombatEntity> order  = getAliveTurnOrder();
-        List<ICombatEntity> enemies= getEnemiesOf(actor.getTeam());
-        TurnResult result;
-
-        if (actor.getTeam() == Team.PLAYER) {
-            result = processor.getPlayerPause(order, enemies);
-        } else {
-            result = processor.handleAiTurn(actor, order, enemies);
-        }
-        System.out.println("the result in TurnResult.step() is "+result.getType());
-        currentRoundResult.addTurnResult(result);
         return result;
     }
 
-    /** When UI finally clicks a player-action button: */
-    public TurnResult playerAct(ICombatAction action, List<ICombatEntity> targets) {
-        List<ICombatEntity> order   = getAliveTurnOrder();
-        List<ICombatEntity> enemies = getEnemiesOf(Team.PLAYER);
-
-        TurnResult result = processor.handlePlayerTurn(order, enemies, action, targets);
-        currentRoundResult.addTurnResult(result);
-        return result;
+    /** For the “Turn Order” bar in the UI */
+    public List<ICombatEntity> getTurnOrder() {
+        return queue.upcoming();
     }
 
-    public List<ICombatEntity> getAliveTurnOrder() {
-        return allEntities.stream()
-                .filter(ICombatEntity::isAlive)
-                .sorted(Comparator.comparingInt(e -> -e.getDerived(com.wimbledor.combat.enums.DerivedStat.SPEED)))
-                .toList();
-    }
-
+    /** For the enemies-panel in the UI */
     public List<ICombatEntity> getEnemiesOf(Team team) {
         return allEntities.stream()
                 .filter(e -> e.isAlive() && e.getTeam() != team)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-
+    private List<ICombatEntity> sortedAlive() {
+        return allEntities.stream()
+                .filter(ICombatEntity::isAlive)
+                .sorted(Comparator.comparingInt(
+                        e -> -e.getDerived(com.wimbledor.combat.enums.DerivedStat.SPEED)
+                ))
+                .collect(Collectors.toList());
+    }
 }
